# MyActions

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: index.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: auth.py  config.py  security.py
app/db/: models.py  session.py
app/domain/: constants.py
app/schemas/: responses.py
app/services/: alerts.py  backtesting.py  capital.py  data_provider.py  decision_engine.py  indicators.py  intraday.py  lessons.py  live_market.py  market_clock.py  market_intelligence.py  model_registry.py  notifications.py  orb.py  orb_dashboard.py  risk.py  trading_plan.py  trading_signal.py  training.py
app/web/: app.js  index.html  login.html  styles.css
docs/: deployment.md  xtb-automation-prompt.md
tests/: test_api.py  test_indicators.py
tools/: monitor-xtb.mjs  read-chrome-debug.mjs  start-chrome-debug.ps1  start-xtb-monitor.ps1
