[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-intelligence-api"
version = "0.1.0"
description = "Trading Intelligence API for explainable TSM analysis"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "plotly>=5.22.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "yfinance>=0.2.40",
  "joblib>=1.4.0",
  "python-dotenv>=1.0.0",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
ml = [
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
  "catboost>=1.2.0",
  "tensorflow>=2.16.0",
  "prophet>=1.1.0",
  "statsmodels>=0.14.0"
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
